# cpp-chatroom

./: CMakeLists.txt  README.md
src/apps/: chat_client_main.cpp  chat_gateway_main.cpp  chatd_tcp_main.cpp  chatd_ws_main.cpp
src/client/: main.cpp
src/common/: framing.cpp  framing.h  json_io.h
src/core/: chat_core.cpp  chat_core.h  connection.h  logger.h  protocol.h
src/net/: net_platform.cpp  net_platform.h
src/server/: main.cpp
src/transport/gateway/: ws_gateway.cpp  ws_gateway.h
src/transport/tcp/: tcp_server.cpp  tcp_server.h
src/transport/ws/: ws_server.cpp  ws_server.h
